--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
-            "@vercel/analytics": "^1.6.1",
+            "@tailwindcss/vite": "^4.1.18",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
