--- a/docker/Dockerfile.hf
+++ b/docker/Dockerfile.hf
@@ -44,7 +44,7 @@ FROM nginx:alpine AS production
 RUN adduser -D -u 1000 appuser
 
 # Copy custom nginx configuration for HF Spaces (port 7860)
-COPY nginx.hf.conf /etc/nginx/conf.d/default.conf
+COPY docker/nginx.hf.conf /etc/nginx/conf.d/default.conf
 
 # Copy built assets from builder stage
 COPY --from=builder /app/build /usr/share/nginx/html
